Kaggle Notebook | Exercise: Inconsistent Data Entry | Version 3

--- a/exercise-inconsistent-data-entry.ipynb
+++ b/exercise-inconsistent-data-entry.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "556c3c93",
+   "id": "8fb18b60",
    "metadata": {
     "papermill": {
-     "duration": 0.00716,
-     "end_time": "2023-02-12T16:28:15.606199",
+     "duration": 0.00515,
+     "end_time": "2023-02-12T16:31:16.178697",
      "exception": false,
-     "start_time": "2023-02-12T16:28:15.599039",
+     "start_time": "2023-02-12T16:31:16.173547",
      "status": "completed"
     },
     "tags": []
@@ -21,13 +21,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58043fc7",
+   "id": "4df6bc58",
    "metadata": {
     "papermill": {
-     "duration": 0.005363,
-     "end_time": "2023-02-12T16:28:15.620669",
+     "duration": 0.00402,
+     "end_time": "2023-02-12T16:31:16.187072",
      "exception": false,
-     "start_time": "2023-02-12T16:28:15.615306",
+     "start_time": "2023-02-12T16:31:16.183052",
      "status": "completed"
     },
     "tags": []
@@ -43,19 +43,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9946c70c",
+   "id": "ac7a1d4f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-12T16:28:15.634735Z",
-     "iopub.status.busy": "2023-02-12T16:28:15.633763Z",
-     "iopub.status.idle": "2023-02-12T16:28:15.830072Z",
-     "shell.execute_reply": "2023-02-12T16:28:15.829082Z"
+     "iopub.execute_input": "2023-02-12T16:31:16.198496Z",
+     "iopub.status.busy": "2023-02-12T16:31:16.197705Z",
+     "iopub.status.idle": "2023-02-12T16:31:16.411463Z",
+     "shell.execute_reply": "2023-02-12T16:31:16.410574Z"
     },
     "papermill": {
-     "duration": 0.207632,
-     "end_time": "2023-02-12T16:28:15.834087",
+     "duration": 0.222128,
+     "end_time": "2023-02-12T16:31:16.413467",
      "exception": false,
-     "start_time": "2023-02-12T16:28:15.626455",
+     "start_time": "2023-02-12T16:31:16.191339",
      "status": "completed"
     },
     "tags": []
@@ -78,13 +78,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ce734fc",
+   "id": "227a6d16",
    "metadata": {
     "papermill": {
-     "duration": 0.005983,
-     "end_time": "2023-02-12T16:28:15.847484",
+     "duration": 0.004276,
+     "end_time": "2023-02-12T16:31:16.422392",
      "exception": false,
-     "start_time": "2023-02-12T16:28:15.841501",
+     "start_time": "2023-02-12T16:31:16.418116",
      "status": "completed"
     },
     "tags": []
@@ -98,19 +98,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "03b3a153",
+   "id": "c42ace59",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-12T16:28:15.861996Z",
-     "iopub.status.busy": "2023-02-12T16:28:15.860622Z",
-     "iopub.status.idle": "2023-02-12T16:28:15.880742Z",
-     "shell.execute_reply": "2023-02-12T16:28:15.879461Z"
+     "iopub.execute_input": "2023-02-12T16:31:16.433049Z",
+     "iopub.status.busy": "2023-02-12T16:31:16.432650Z",
+     "iopub.status.idle": "2023-02-12T16:31:16.446126Z",
+     "shell.execute_reply": "2023-02-12T16:31:16.445018Z"
     },
     "papermill": {
-     "duration": 0.030512,
-     "end_time": "2023-02-12T16:28:15.884056",
+     "duration": 0.021676,
+     "end_time": "2023-02-12T16:31:16.448549",
      "exception": false,
-     "start_time": "2023-02-12T16:28:15.853544",
+     "start_time": "2023-02-12T16:31:16.426873",
      "status": "completed"
     },
     "tags": []
@@ -135,13 +135,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f63730f",
+   "id": "368b9548",
    "metadata": {
     "papermill": {
-     "duration": 0.005006,
-     "end_time": "2023-02-12T16:28:15.894610",
+     "duration": 0.004215,
+     "end_time": "2023-02-12T16:31:16.457364",
      "exception": false,
-     "start_time": "2023-02-12T16:28:15.889604",
+     "start_time": "2023-02-12T16:31:16.453149",
      "status": "completed"
     },
     "tags": []
@@ -153,19 +153,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5108630f",
+   "id": "bc5dfa4e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-12T16:28:15.907348Z",
-     "iopub.status.busy": "2023-02-12T16:28:15.906812Z",
-     "iopub.status.idle": "2023-02-12T16:28:15.923970Z",
-     "shell.execute_reply": "2023-02-12T16:28:15.922254Z"
+     "iopub.execute_input": "2023-02-12T16:31:16.467974Z",
+     "iopub.status.busy": "2023-02-12T16:31:16.467585Z",
+     "iopub.status.idle": "2023-02-12T16:31:16.480827Z",
+     "shell.execute_reply": "2023-02-12T16:31:16.479925Z"
     },
     "papermill": {
-     "duration": 0.027251,
-     "end_time": "2023-02-12T16:28:15.927206",
+     "duration": 0.021196,
+     "end_time": "2023-02-12T16:31:16.482974",
      "exception": false,
-     "start_time": "2023-02-12T16:28:15.899955",
+     "start_time": "2023-02-12T16:31:16.461778",
      "status": "completed"
     },
     "tags": []
@@ -215,13 +215,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "614f2812",
+   "id": "3721d993",
    "metadata": {
     "papermill": {
-     "duration": 0.005131,
-     "end_time": "2023-02-12T16:28:15.938086",
+     "duration": 0.004316,
+     "end_time": "2023-02-12T16:31:16.491908",
      "exception": false,
-     "start_time": "2023-02-12T16:28:15.932955",
+     "start_time": "2023-02-12T16:31:16.487592",
      "status": "completed"
     },
     "tags": []
@@ -235,19 +235,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0dd2ae3f",
+   "id": "539ac076",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-12T16:28:15.950995Z",
-     "iopub.status.busy": "2023-02-12T16:28:15.950008Z",
-     "iopub.status.idle": "2023-02-12T16:28:15.964124Z",
-     "shell.execute_reply": "2023-02-12T16:28:15.962787Z"
+     "iopub.execute_input": "2023-02-12T16:31:16.502664Z",
+     "iopub.status.busy": "2023-02-12T16:31:16.502356Z",
+     "iopub.status.idle": "2023-02-12T16:31:16.513868Z",
+     "shell.execute_reply": "2023-02-12T16:31:16.512864Z"
     },
     "papermill": {
-     "duration": 0.024069,
-     "end_time": "2023-02-12T16:28:15.967356",
+     "duration": 0.019397,
+     "end_time": "2023-02-12T16:31:16.515839",
      "exception": false,
-     "start_time": "2023-02-12T16:28:15.943287",
+     "start_time": "2023-02-12T16:31:16.496442",
      "status": "completed"
     },
     "tags": []
@@ -502,13 +502,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18236fad",
+   "id": "6857bcdd",
    "metadata": {
     "papermill": {
-     "duration": 0.005648,
-     "end_time": "2023-02-12T16:28:15.979287",
+     "duration": 0.005346,
+     "end_time": "2023-02-12T16:31:16.526381",
      "exception": false,
-     "start_time": "2023-02-12T16:28:15.973639",
+     "start_time": "2023-02-12T16:31:16.521035",
      "status": "completed"
     },
     "tags": []
@@ -522,19 +522,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9aff2da1",
+   "id": "3781ceba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-12T16:28:15.993384Z",
-     "iopub.status.busy": "2023-02-12T16:28:15.992918Z",
-     "iopub.status.idle": "2023-02-12T16:28:16.003311Z",
-     "shell.execute_reply": "2023-02-12T16:28:16.001712Z"
+     "iopub.execute_input": "2023-02-12T16:31:16.538138Z",
+     "iopub.status.busy": "2023-02-12T16:31:16.537769Z",
+     "iopub.status.idle": "2023-02-12T16:31:16.546359Z",
+     "shell.execute_reply": "2023-02-12T16:31:16.545347Z"
     },
     "papermill": {
-     "duration": 0.020626,
-     "end_time": "2023-02-12T16:28:16.005800",
+     "duration": 0.016993,
+     "end_time": "2023-02-12T16:31:16.548587",
      "exception": false,
-     "start_time": "2023-02-12T16:28:15.985174",
+     "start_time": "2023-02-12T16:31:16.531594",
      "status": "completed"
     },
     "tags": []
@@ -577,19 +577,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e6a8d50e",
+   "id": "5e6b5a83",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-12T16:28:16.021599Z",
-     "iopub.status.busy": "2023-02-12T16:28:16.020683Z",
-     "iopub.status.idle": "2023-02-12T16:28:16.025555Z",
-     "shell.execute_reply": "2023-02-12T16:28:16.024431Z"
+     "iopub.execute_input": "2023-02-12T16:31:16.560953Z",
+     "iopub.status.busy": "2023-02-12T16:31:16.560433Z",
+     "iopub.status.idle": "2023-02-12T16:31:16.563534Z",
+     "shell.execute_reply": "2023-02-12T16:31:16.562918Z"
     },
     "papermill": {
-     "duration": 0.015683,
-     "end_time": "2023-02-12T16:28:16.028023",
+     "duration": 0.011152,
+     "end_time": "2023-02-12T16:31:16.565126",
      "exception": false,
-     "start_time": "2023-02-12T16:28:16.012340",
+     "start_time": "2023-02-12T16:31:16.553974",
      "status": "completed"
     },
     "tags": []
@@ -602,13 +602,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43976e83",
+   "id": "0d3b44ff",
    "metadata": {
     "papermill": {
-     "duration": 0.00598,
-     "end_time": "2023-02-12T16:28:16.040466",
+     "duration": 0.004694,
+     "end_time": "2023-02-12T16:31:16.574879",
      "exception": false,
-     "start_time": "2023-02-12T16:28:16.034486",
+     "start_time": "2023-02-12T16:31:16.570185",
      "status": "completed"
     },
     "tags": []
@@ -622,19 +622,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d79bca24",
+   "id": "e35cb531",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-12T16:28:16.056034Z",
-     "iopub.status.busy": "2023-02-12T16:28:16.054590Z",
-     "iopub.status.idle": "2023-02-12T16:28:16.075510Z",
-     "shell.execute_reply": "2023-02-12T16:28:16.074630Z"
+     "iopub.execute_input": "2023-02-12T16:31:16.587230Z",
+     "iopub.status.busy": "2023-02-12T16:31:16.586367Z",
+     "iopub.status.idle": "2023-02-12T16:31:16.599493Z",
+     "shell.execute_reply": "2023-02-12T16:31:16.598358Z"
     },
     "papermill": {
-     "duration": 0.030979,
-     "end_time": "2023-02-12T16:28:16.077659",
+     "duration": 0.021931,
+     "end_time": "2023-02-12T16:31:16.601766",
      "exception": false,
-     "start_time": "2023-02-12T16:28:16.046680",
+     "start_time": "2023-02-12T16:31:16.579835",
      "status": "completed"
     },
     "tags": []
@@ -676,72 +676,39 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "12fdd362",
+   "id": "02477c35",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-12T16:28:16.093462Z",
-     "iopub.status.busy": "2023-02-12T16:28:16.092489Z",
-     "iopub.status.idle": "2023-02-12T16:28:16.101097Z",
-     "shell.execute_reply": "2023-02-12T16:28:16.100008Z"
+     "iopub.execute_input": "2023-02-12T16:31:16.615371Z",
+     "iopub.status.busy": "2023-02-12T16:31:16.614469Z",
+     "iopub.status.idle": "2023-02-12T16:31:16.618566Z",
+     "shell.execute_reply": "2023-02-12T16:31:16.617879Z"
     },
     "papermill": {
-     "duration": 0.019366,
-     "end_time": "2023-02-12T16:28:16.103476",
+     "duration": 0.012195,
+     "end_time": "2023-02-12T16:31:16.620277",
      "exception": false,
-     "start_time": "2023-02-12T16:28:16.084110",
+     "start_time": "2023-02-12T16:31:16.608082",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "parent.postMessage({\"jupyterEvent\": \"custom.exercise_interaction\", \"data\": {\"interactionType\": 3, \"questionType\": 1, \"questionId\": \"2_TextProcessing\", \"learnToolsVersion\": \"0.3.4\", \"valueTowardsCompletion\": 0.0, \"failureMessage\": \"\", \"exceptionClass\": \"\", \"trace\": \"\", \"outcomeType\": 4}}, \"*\")"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "<span style=\"color:#33cc99\">Solution:</span> \n",
-       "```python\n",
-       "professors['Graduated from'] = professors['Graduated from'].str.strip()\n",
-       "\n",
-       "```"
-      ],
-      "text/plain": [
-       "Solution: \n",
-       "```python\n",
-       "professors['Graduated from'] = professors['Graduated from'].str.strip()\n",
-       "\n",
-       "```"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Lines below will give you a hint or solution code\n",
     "#q2.hint()\n",
-    "q2.solution()"
+    "#q2.solution()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5cc2991f",
+   "id": "80a3ffa0",
    "metadata": {
     "papermill": {
-     "duration": 0.006408,
-     "end_time": "2023-02-12T16:28:16.116786",
+     "duration": 0.004975,
+     "end_time": "2023-02-12T16:31:16.630586",
      "exception": false,
-     "start_time": "2023-02-12T16:28:16.110378",
+     "start_time": "2023-02-12T16:31:16.625611",
      "status": "completed"
     },
     "tags": []
@@ -755,19 +722,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "39ea4b88",
+   "id": "758be78c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-12T16:28:16.134057Z",
-     "iopub.status.busy": "2023-02-12T16:28:16.133168Z",
-     "iopub.status.idle": "2023-02-12T16:28:16.141816Z",
-     "shell.execute_reply": "2023-02-12T16:28:16.140674Z"
+     "iopub.execute_input": "2023-02-12T16:31:16.643372Z",
+     "iopub.status.busy": "2023-02-12T16:31:16.642788Z",
+     "iopub.status.idle": "2023-02-12T16:31:16.648572Z",
+     "shell.execute_reply": "2023-02-12T16:31:16.647966Z"
     },
     "papermill": {
-     "duration": 0.02006,
-     "end_time": "2023-02-12T16:28:16.144700",
+     "duration": 0.014085,
+     "end_time": "2023-02-12T16:31:16.650420",
      "exception": false,
-     "start_time": "2023-02-12T16:28:16.124640",
+     "start_time": "2023-02-12T16:31:16.636335",
      "status": "completed"
     },
     "tags": []
@@ -801,13 +768,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "614ba76d",
+   "id": "37ee252b",
    "metadata": {
     "papermill": {
-     "duration": 0.006711,
-     "end_time": "2023-02-12T16:28:16.158843",
+     "duration": 0.005353,
+     "end_time": "2023-02-12T16:31:16.661564",
      "exception": false,
-     "start_time": "2023-02-12T16:28:16.152132",
+     "start_time": "2023-02-12T16:31:16.656211",
      "status": "completed"
     },
     "tags": []
@@ -823,19 +790,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "77004623",
+   "id": "e26de60b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-12T16:28:16.175139Z",
-     "iopub.status.busy": "2023-02-12T16:28:16.174596Z",
-     "iopub.status.idle": "2023-02-12T16:28:16.191817Z",
-     "shell.execute_reply": "2023-02-12T16:28:16.190884Z"
+     "iopub.execute_input": "2023-02-12T16:31:16.674650Z",
+     "iopub.status.busy": "2023-02-12T16:31:16.674151Z",
+     "iopub.status.idle": "2023-02-12T16:31:16.686702Z",
+     "shell.execute_reply": "2023-02-12T16:31:16.685642Z"
     },
     "papermill": {
-     "duration": 0.028393,
-     "end_time": "2023-02-12T16:28:16.194182",
+     "duration": 0.021264,
+     "end_time": "2023-02-12T16:31:16.688457",
      "exception": false,
-     "start_time": "2023-02-12T16:28:16.165789",
+     "start_time": "2023-02-12T16:31:16.667193",
      "status": "completed"
     },
     "tags": []
@@ -885,19 +852,19 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b4a6009e",
+   "id": "2606a5bd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-12T16:28:16.211253Z",
-     "iopub.status.busy": "2023-02-12T16:28:16.210327Z",
-     "iopub.status.idle": "2023-02-12T16:28:16.215612Z",
-     "shell.execute_reply": "2023-02-12T16:28:16.214692Z"
+     "iopub.execute_input": "2023-02-12T16:31:16.701427Z",
+     "iopub.status.busy": "2023-02-12T16:31:16.701052Z",
+     "iopub.status.idle": "2023-02-12T16:31:16.705569Z",
+     "shell.execute_reply": "2023-02-12T16:31:16.704309Z"
     },
     "papermill": {
-     "duration": 0.01662,
-     "end_time": "2023-02-12T16:28:16.217967",
+     "duration": 0.013168,
+     "end_time": "2023-02-12T16:31:16.707428",
      "exception": false,
-     "start_time": "2023-02-12T16:28:16.201347",
+     "start_time": "2023-02-12T16:31:16.694260",
      "status": "completed"
     },
     "tags": []
@@ -911,13 +878,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d520af4f",
+   "id": "385ef29a",
    "metadata": {
     "papermill": {
-     "duration": 0.006795,
-     "end_time": "2023-02-12T16:28:16.231971",
+     "duration": 0.005277,
+     "end_time": "2023-02-12T16:31:16.718301",
      "exception": false,
-     "start_time": "2023-02-12T16:28:16.225176",
+     "start_time": "2023-02-12T16:31:16.713024",
      "status": "completed"
     },
     "tags": []
@@ -932,13 +899,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75b5283f",
+   "id": "23df2995",
    "metadata": {
     "papermill": {
-     "duration": 0.006576,
-     "end_time": "2023-02-12T16:28:16.245774",
+     "duration": 0.00524,
+     "end_time": "2023-02-12T16:31:16.729096",
      "exception": false,
-     "start_time": "2023-02-12T16:28:16.239198",
+     "start_time": "2023-02-12T16:31:16.723856",
      "status": "completed"
     },
     "tags": []
@@ -973,14 +940,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 10.603684,
-   "end_time": "2023-02-12T16:28:17.176808",
+   "duration": 8.268989,
+   "end_time": "2023-02-12T16:31:17.353883",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-02-12T16:28:06.573124",
+   "start_time": "2023-02-12T16:31:09.084894",
    "version": "2.3.4"
   }
  },
